--- a/lecture/lecture3.html
+++ b/lecture/lecture3.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
-    a{
+    /* a{
         background-color: aqua;
         text-decoration: none
     }
@@ -17,16 +17,37 @@
     a:visited{
         color: palevioletred;
         text-decoration-line: overline;
+    } */
+    div{
+        margin: 10px;
+    }
+    .vertical{
+        height: 400%;
+        width: 15%;
+        margin: 0%;
+        display: inline-block;
+    }
+    .vertical2{
+        height: 400%;
+        width: 75%;
+        display: inline-block;
+        margin: 0%;
     }
     </style>
 
 
 </head>
-
-
-
 <body>
-    <div style = 'color:gold; font-size: 30px; background-image: url()'>
+    <div>
+        hahaha
+    </div>
+    <div class = 'vertical'>
+        hihihi
+    </div>
+    <div class = 'vertical2'>
+        huhuhu
+    </div>
+    <!-- <div style = 'color:gold; font-size: 30px; background-image: url()'>
     </div>
     <div class = 'myClass'>
         <a href = ''>anchor tag</a>
@@ -37,6 +58,6 @@
         <br>
         <a href = '#'>anchor tag</a>
         <br>
-    </div>
+    </div> -->
 </body>
 </html>
