--- a/flexbox_ex/mosaic/mosaic.html
+++ b/flexbox_ex/mosaic/mosaic.html
@@ -24,22 +24,17 @@
             </div>
             <div class='columnVeryLeft inline floatLeft'>
                 <div class="halfMidSquareColumn inline border">3</div>
-                <div class="rectangleLongColumn inline pushUp border">4</div>
-                <div class="rectangleLongColumn inline pushUp border">5</div>
+                <div class="rectangleLongColumn inline border">4</div>
+                <div class="rectangleLongColumn inline border">5</div>
             </div>
             <div class='columnSecondFromLeft inline'>
                 <div class="red bigSquare inline floatLeft border"></div>
-
-                <div class="columnSecondFromLeftSmall inline floatLeft">
-                    <div class="black midSquare inline border"></div>
-                    <div class="midSquare inline border ">8</div>
-                </div>
-                <div class="columnSecondFromLeftSmall floatLeft">
-                    <div class="halfMidSquareSide inline border">9</div>
-                    <div class="halfMidSquareSide inline border">10</div>
-                    <div class="black halfMidSquareSide inline border"></div>
-                    <div class="halfMidSquareSide inline border">12</div>
-                </div>
+                <div class="black midSquare inline floatLeft border"></div>
+                <div class="halfMidSquareSide inline border">9</div>
+                <div class="halfMidSquareSide inline border">10</div>
+                <div class="midSquare inline border floatLeft">8</div>
+                <div class="black halfMidSquareSide inline border"></div>
+                <div class="halfMidSquareSide inline border moveUp">12</div>
             </div>
             <div class="leftBottomLong">
                 <div class="rectangleLongSide inline floatLeft border">13</div>
@@ -75,27 +70,27 @@
         </div>
 
         <!-- Right box -->
-        <div class="rightBoxSetting inline">
+        <div class="rightBoxSetting blackback inline">
             <div class='columnVeryRight inline'>
                 <div class = "midSmallDiv inline floatLeft">
-                    <div class="rectangleLongColumn70_140 inline border floatLeft">r1</div>
-                    <div class="yellow rectangleLongColumn70_140 inline border floatLeft">r2</div>
-                    <div class="black halfMidSquareSide inline border floatLeft">r6</div>
-                    <div class="halfMidSquareSide inline border floatLeft">r6</div>
-                    <div class="halfMidSquareSide inline border floatLeft">r6</div>
+                    <div class="whiteBack rectangleLongColumn70_140 inline border floatLeft">r1</div>
+                    <div class="yellow rectangleLongColumn70_140 inline border floatLeft"></div>
+                    <div class="black halfMidSquareSide inline border floatLeft"></div>
+                    <div class="whiteBack halfMidSquareSide inline border floatLeft">r6</div>
+                    <div class="whiteBack halfMidSquareSide inline border floatLeft">r6</div>
                 </div>
-                <div class="topLeftBoxSideLong2 inline border">r3</div>
-                <div class="midSquare inline border floatLeft">r4</div>
+                <div class="whiteBack topLeftBoxSideLong2 inline border">r3</div>
+                <div class="whiteBack midSquare inline border floatLeft">r4</div>
                 <div class="black halfMidSquareSide inline border floatLeft"></div>
                 <div class="yellow rectangleLongColumn inline border"></div>
                 <div class="black halfMidSquareSide inline border floatLeft"></div>
-                <div class="red bigSquare inline floatLeft border"></div>
-                <div class="rectangleLongColumn inline border">5</div>
-                <div class="halfMidSquareColumn inline border">3</div>
+                <div class="red bigSquare inline floatLeft border" ></div>
+                <div class="whiteBack rectangleLongColumn inline border">5</div>
+                <div class="whiteBack halfMidSquareColumn inline border">3</div>
             </div>
             <div class="divSideLong">
-                <div class="rectangleLongSide inline floatLeft border">13</div>
-                <div class="topLeftBoxSideLong inline border">1</div>
+                <div class="whiteBack rectangleLongSide inline floatLeft border">13</div>
+                <div class="whiteBack topLeftBoxSideLong inline border">1</div>
             </div>
         </div>
     </div>
