updated other pages on restaurants

--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -16,8 +16,6 @@
     .center {
       text-align: center;
     }
-
-
     .mainImage {
       background-image:
         url("https://images.unsplash.com/photo-1455619452474-d2be8b1e70cd?ixlib=rb-0.3.5&s=54fc569aaa2f0738d0f046f6b9fd7689&auto=format&fit=crop&w=1950&q=80");
@@ -105,14 +103,16 @@
             Menu
           </a>
           <div class="dropdown-menu dropdown" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item dropdown" href="#">Appetizers</a>
-            <a class="dropdown-item dropdown" href="#">Soups & Salad</a>
-            <a class="dropdown-item dropdown" href="#">Noodle/Fried Rice/Curry</a>
-            <a class="dropdown-item dropdown" href="#">Engree/House Special</a>
+            <a class="dropdown-item dropdown" href="appetizer.html">Appetizers</a>
+            <a class="dropdown-item dropdown" href="soupsandsalad.html">Soups & Salad</a>
+            <a class="dropdown-item dropdown" href="noodles.html">Noodle/Fried Rice/Curry</a>
+            <a class="dropdown-item dropdown" href="entree.html">Entree/House Special</a>
             <a class="dropdown-item dropdown" href="vegetarian.html">Vegetarian</a>
-            <a class="dropdown-item dropdown" href="#">Drinks</a>
+            <a class="dropdown-item dropdown" href="drinks.html">Drinks</a>
 
-          </div>
+        </div>
+
+
         </li>
 
         <li class="nav-item pr-4 pl-4">
