--- a/restaurant/soupsandsalad.html
+++ b/restaurant/soupsandsalad.html
@@ -56,7 +56,7 @@
     <div class ="overlayDirection"></div>
     <div class="container">
         <div class="row section sectionWhite-bg">
-            <h2 style="margin:5%; width:100%; text-align:center;">VEGETARIAN</h2>
+            <h2 style="margin:5%; width:100%; text-align:center;">SOUPS / SALAD</h2>
             <table class="table table-borderless" style="margin-top:2%;">
                 <thead>
                     <tr>
