--- a/restaurant/directions.html
+++ b/restaurant/directions.html
@@ -21,28 +21,6 @@
       height: 45vh;
     }
 
-    .backgroundColor {
-      background-color: rgb(236, 236, 236);
-    }
-
-    .overlayDirection {
-      background-color: black;
-      position: absolute;
-      overflow: hidden;
-      top: 0px;
-      z-index: 20;
-      margin: 0;
-      width: 100%;
-      height: 45vh;
-      opacity: .2;
-      margin: 0;
-      padding: 0;
-    }
-
-    .navText {
-      color: rgb(209, 207, 204);
-      font-size: 1.3rem;
-    }
   </style>
 </head>
 
@@ -63,14 +41,14 @@
             Menu
           </a>
           <div class="dropdown-menu dropdown" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item dropdown" href="#">Appetizers</a>
-            <a class="dropdown-item dropdown" href="#">Soups & Salad</a>
-            <a class="dropdown-item dropdown" href="#">Noodle/Fried Rice/Curry</a>
-            <a class="dropdown-item dropdown" href="#">Engree/House Special</a>
+            <a class="dropdown-item dropdown" href="appetizer.html">Appetizers</a>
+            <a class="dropdown-item dropdown" href="soupsandsalad.html">Soups & Salad</a>
+            <a class="dropdown-item dropdown" href="noodles.html">Noodle/Fried Rice/Curry</a>
+            <a class="dropdown-item dropdown" href="entree.html">Entree/House Special</a>
             <a class="dropdown-item dropdown" href="vegetarian.html">Vegetarian</a>
-            <a class="dropdown-item dropdown" href="#">Drinks</a>
+            <a class="dropdown-item dropdown" href="drinks.html">Drinks</a>
 
-          </div>
+        </div>
         </li>
 
         <li class="nav-item pr-4 pl-4">
@@ -86,7 +64,7 @@
   <div class="overlayDirection"></div>
   <div class="container ">
     <div class="row">
-      <div class="col-md-12" style="text-align: center;">
+      <div class="col-lg-6 col-sm-12" style="text-align: center;">
 
         <div style='font-weight: bold; margin:5% auto 1.5% auto; font-size:18px'>Lunch</div>
         <ul class="list-unstyled">
@@ -100,7 +78,7 @@
           <li><span style="margin-right:7.3em">Sunday</span>05:00 PM - 09:00 PM</li>
         </ul>
 
-        <div style='font-weight: bold; margin:10% auto 1.5% auto;font-size:22px'>Thai Siam Restaurant</div>
+        <div style='font-weight: bold; margin:7% auto 0 auto;font-size:22px'>Thai Siam Restaurant</div>
         <ul class="list-unstyled">
           <li>11557 South Hwy.6 @ W. Airport Blvd.,</li>
           <li>Sugar Land, TX 77478</li>
@@ -108,7 +86,7 @@
         </ul>
 
       </div>
-      <div class="col-md-12" style="padding-top:20px;">
+      <div class="col-lg-6 col-sm-6" style="padding-top:20px;">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3467.5030655727305!2d-95.65193728499877!3d29.647173044184857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640e0b44ae39819%3A0x603ce1c55c68f5cf!2sThai+Siam!5e0!3m2!1sen!2sus!4v1543891429178"
           width="600" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
