--- a/restaurant/drinks.html
+++ b/restaurant/drinks.html
@@ -38,8 +38,6 @@
                         <a class="dropdown-item dropdown" href="drinks.html">Drinks</a>
 
                     </div>
-
-
                 </li>
 
                 <li class="nav-item pr-4 pl-4">
@@ -52,11 +50,12 @@
         </nav>
     </header>
 
-    <div class="parallax"></div>
+    <div class="parallax"> </div>
     <div class ="overlayDirection"></div>
+
     <div class="container">
         <div class="row section sectionWhite-bg">
-            <h2 style="margin:5%; width:100%; text-align:center;">VEGETARIAN</h2>
+            <h2 style="margin:5%; width:100%; text-align:center;">DRINKS</h2>
             <table class="table table-borderless" style="margin-top:2%;">
                 <thead>
                     <tr>
