--- a/restaurant/entree.html
+++ b/restaurant/entree.html
@@ -38,8 +38,6 @@
                         <a class="dropdown-item dropdown" href="drinks.html">Drinks</a>
 
                     </div>
-
-
                 </li>
 
                 <li class="nav-item pr-4 pl-4">
@@ -54,9 +52,10 @@
 
     <div class="parallax"></div>
     <div class ="overlayDirection"></div>
+    
     <div class="container">
         <div class="row section sectionWhite-bg">
-            <h2 style="margin:5%; width:100%; text-align:center;">VEGETARIAN</h2>
+            <h2 style="margin:5%; width:100%; text-align:center;">ENTREE / HOUSE SPECIAL</h2>
             <table class="table table-borderless" style="margin-top:2%;">
                 <thead>
                     <tr>
