--- a/restaurant/noodles.html
+++ b/restaurant/noodles.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="styles/global.css">
+
 </head>
 
 <body class="backgroundColor">
@@ -38,8 +39,6 @@
                         <a class="dropdown-item dropdown" href="drinks.html">Drinks</a>
 
                     </div>
-
-
                 </li>
 
                 <li class="nav-item pr-4 pl-4">
@@ -52,11 +51,13 @@
         </nav>
     </header>
 
-    <div class="parallax"></div>
+    <div class="parallax">
     <div class ="overlayDirection"></div>
+    </div>
     <div class="container">
         <div class="row section sectionWhite-bg">
-            <h2 style="margin:5%; width:100%; text-align:center;">VEGETARIAN</h2>
+            <div class="col col-lg-12 col-sm-12">
+            <h2 style="margin:5%; width:100%; text-align:center;">NOODLES / FRIED RICE / CURRY</h2>
             <table class="table table-borderless" style="margin-top:2%;">
                 <thead>
                     <tr>
@@ -196,6 +197,7 @@
 
                 </tbody>
             </table>
+            </div>
         </div>
     </div>
 
