--- a/bootstrap_ex/DCinterest.html
+++ b/bootstrap_ex/DCinterest.html
@@ -13,23 +13,25 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand flex-column flex-md-row navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand text-secondary" href="#">
-            <img src="https://www.digitalcrafts.com/img/digitalcrafts-site-logo.png" width="90" height="30" style="margin:0 1em 0 1em;">
-            DCinterest
-        </a>
-        
-        <ul class="nav navbar-nav flex-row ml-md-auto d-md-flex">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">FAQ</a>
-            </li>
-        </ul>
+    <nav class="navbar navbar-expand fle x-column flex-md-row navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand text-secondary" href="#">
+                <img src="https://www.digitalcrafts.com/img/digitalcrafts-site-logo.png" width="90" height="30" style="margin:0 1em 0 1em;">
+                DCinterest
+            </a>
+            
+            <ul class="nav navbar-nav flex-row ml-md-auto d-md-flex">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">FAQ</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <div class="container " style="margin-top:7%;">
         <div class="card-columns">
