--- a/restaurant_ver00/index.html
+++ b/restaurant_ver00/index.html
@@ -128,6 +128,20 @@
     <div class="overlay">
     </div>
     <div class="textOverlay"></div>
+<!--     
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="https://images.unsplash.com/photo-1455619452474-d2be8b1e70cd?ixlib=rb-0.3.5&s=54fc569aaa2f0738d0f046f6b9fd7689&auto=format&fit=crop&w=1950&q=80" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="https://images.unsplash.com/photo-1441850605338-1b0b5a22e7b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="https://images.pexels.com/photos/1652001/pexels-photo-1652001.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Third slide">
+        </div>
+      </div>
+    </div> -->
 
     <!-- <div id="carousel" class="carousel slide carouselReview" data-ride="carousel";>
       <div class="carousel-inner" style="width:100%; height:100%;">
