--- a/restaurant_ver01/directions.html
+++ b/restaurant_ver01/directions.html
@@ -17,11 +17,12 @@
 
 <body class="backgroundColor">
   <header>
-    <div class="row d-flex justify-content-center fixed-top veryTop">
-      <span>Tel: 281-277-2001</span><span class="ml-3">11557 South Hwy.6 @ W. Airport Blvd., Sugar Land, TX 77478
-      </span>
-    </div>
-    <nav class="navbar top4down navbar-expand-md d-flex justify-content-center navbar-dark bg-black fixed-top navbar-fixed-top">
+      <div class="row d-flex justify-content-center fixed-top veryTop">
+          <span class='mr-sm-3'>Tel: 281-277-2001</span><span>11557 South Hwy.6 @ W. Airport Blvd., Sugar Land, TX
+              77478
+          </span>
+      </div>
+    <nav class="navbar top4down navbar-expand-sm d-flex navbar-dark fixed-top navbar-fixed-top">
       <a class="navbar-brand" href="index.html">
         <img src="img/logo.png" width="100%" height="100%" />
       </a>
@@ -29,12 +30,12 @@
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavId">
-        <ul class="navbar-nav">
-          <li class="nav-item active mx-5">
+      <div class="collapse navbar-collapse d-flex " id="collapsibleNavId">
+        <ul class="navbar-nav ">
+          <li class="nav-item active mx-lg-5 px-lg-3 mr-md-3">
             <a class="nav-link navText" href="index.html"> Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown mr-lg-5 mr-md-3">
             <a class="nav-link dropdown-toggle navText" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Menu
@@ -48,13 +49,14 @@
               <a class="dropdown-item dropdown" href="drinks.html">Drinks</a>
             </div>
           </li>
-          <li class="nav-item mx-5">
+          <li class="nav-item mr-lg-5 mr-md-3">
             <a class="nav-link navText" href="directions.html">Directions</a>
           </li>
-          <li class="nav-item pr-4">
+          <li class="nav-item pr-4 mr-lg-5 mr-md-3">
             <a class="nav-link navText" href="#">Reservation</a>
           </li>
         </ul>
+
       </div>
     </nav>
   </header>
@@ -64,24 +66,24 @@
   <div class="container ">
     <div class="row">
       <div class="col-lg-6 col-sm-12 text-center">
-        <div class='lunchDinner'>Lunch</div>
-        <ul class="list-unstyled">
-          <li><span class="mr3rem">Monday - Friday</span>11:00 AM - 03:00 PM</li>
-          <li><span class="mr2rem">Saturday - Sunday</span>11:30 AM - 03:00 PM</li>
-        </ul>
-        <div class='lunchDinner'>Dinner</div>
-        <ul class="list-unstyled">
-          <li><span class="mr2rem">Monday - Thursday</span>05:00 PM - 09:30 PM</li>
-          <li><span class="mr3rem">Friday - Saturday</span>05:00 PM - 10:00 PM</li>
-          <li><span class="mr7rem">Sunday</span>05:00 PM - 09:00 PM</li>
-        </ul>
+        <p class='lunchDinner'>Lunch</span>
+          <ul class="list-unstyled">
+            <li><span class="mr2rem">Monday - Friday</span>11:00 AM - 03:00 PM</li>
+            <li><span class="mr1rem">Saturday - Sunday</span>11:30 AM - 03:00 PM</li>
+          </ul>
+          <p class='lunchDinner'>Dinner</p>
+          <ul class="list-unstyled">
+            <li><span class="mr1rem">Monday - Thursday</span>05:00 PM - 09:30 PM</li>
+            <li><span class="mr2rem">Friday - Saturday</span>05:00 PM - 10:00 PM</li>
+            <li><span class="mr6rem">Sunday</span>05:00 PM - 09:00 PM</li>
+          </ul>
 
-        <div class="font-weight-bold fontsize22">Thai Siam Restaurant</div>
-        <ul class="list-unstyled">
-          <li>11557 South Hwy.6 @ W. Airport Blvd.,</li>
-          <li>Sugar Land, TX 77478</li>
-          <li>Tel: 281-277-2001</li>
-        </ul>
+          <div class="font-weight-bold fontsize22">Thai Siam Restaurant</div>
+          <ul class="list-unstyled">
+            <li>11557 South Hwy.6 @ W. Airport Blvd.,</li>
+            <li>Sugar Land, TX 77478</li>
+            <li>Tel: 281-277-2001</li>
+          </ul>
 
       </div>
       <div class="col-lg-6 col-sm-6" style="padding-top:20px;">
