--- a/restaurant_ver01/appetizer.html
+++ b/restaurant_ver01/appetizer.html
@@ -18,25 +18,25 @@
 <body class="backgroundColor">
     <header>
         <div class="row d-flex justify-content-center fixed-top veryTop">
-            <span>Tel: 281-277-2001</span><span class="ml-3">11557 South Hwy.6 @ W. Airport Blvd., Sugar Land, TX 77478
+            <span class='mr-sm-3'>Tel: 281-277-2001</span><span>11557 South Hwy.6 @ W. Airport Blvd., Sugar Land, TX 77478
             </span>
         </div>
-        <nav class="navbar top4down navbar-expand-md d-flex justify-content-center navbar-dark bg-black fixed-top navbar-fixed-top">
+        <nav class="navbar top4down navbar-expand-sm d-flex navbar-dark fixed-top navbar-fixed-top">
             <a class="navbar-brand" href="index.html">
                 <img src="img/logo.png" width="100%" height="100%" />
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
-                aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+                aria-expanded="false" aria-label="Toggle navigation" >
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav">
-                    <li class="nav-item active mx-5">
-                        <a class="nav-link navText" href="index.html"> Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item active mx-lg-5 px-lg-3 mr-md-3">
+                        <a class="nav-link navText"href="index.html"> Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle navText" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
+                    <li class="nav-item dropdown mr-lg-5 mr-md-3">
+                        <a class="nav-link dropdown-toggle navText" href="#" id="navbarDropdownMenuLink"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Menu
                         </a>
                         <div class="dropdown-menu dropdown" aria-labelledby="navbarDropdownMenuLink">
@@ -48,16 +48,17 @@
                             <a class="dropdown-item dropdown" href="drinks.html">Drinks</a>
                         </div>
                     </li>
-                    <li class="nav-item mx-5">
-                        <a class="nav-link navText" href="directions.html">Directions</a>
+                    <li class="nav-item mr-lg-5 mr-md-3">
+                        <a class="nav-link navText" href="directions.html" >Directions</a>
                     </li>
-                    <li class="nav-item pr-4">
+                    <li class="nav-item pr-4 mr-lg-5 mr-md-3">
                         <a class="nav-link navText" href="#">Reservation</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
+
     <div class="parallax"> </div>
 
     <div class="overlayDirection"></div>
@@ -65,13 +66,13 @@
     </div>
     <div class="container">
         <div class="row section sectionWhite-bg">
-            <h2 style="margin:5%; width:100%; text-align:center;">APPETIZER</h2>
-            <table class="table table-borderless" style="margin-top:2%;">
+            <h2 class="mt-4 width text-center">APPETIZER</h2>
+            <table class="table table-borderless table-hover mt-2;">
                 <thead>
                     <tr>
                         <th></th>
-                        <th style="text-align: center;">Item</th>
-                        <th style="text-align: center;">Detail</th>
+                        <th class="text-center">Item</th>
+                        <th class="text-center pr-5 mr-5">Detail</th>
                         <th>Price</th>
                     </tr>
                 </thead>
