--- a/restaurant_ver01/noodles.html
+++ b/restaurant_ver01/noodles.html
@@ -30,11 +30,11 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavId">
-                <ul class="navbar-nav">
-                    <li class="nav-item active mx-5">
+                <ul class="navbar-nav ">
+                    <li class="nav-item active mx-lg-5 px-lg-3 mr-md-3">
                         <a class="nav-link navText" href="index.html"> Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown mr-lg-5 mr-md-3">
                         <a class="nav-link dropdown-toggle navText" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
                             Menu
@@ -48,13 +48,14 @@
                             <a class="dropdown-item dropdown" href="drinks.html">Drinks</a>
                         </div>
                     </li>
-                    <li class="nav-item mx-5">
+                    <li class="nav-item mr-lg-5 mr-md-3">
                         <a class="nav-link navText" href="directions.html">Directions</a>
                     </li>
-                    <li class="nav-item pr-4">
+                    <li class="nav-item pr-4 mr-lg-5 mr-md-3">
                         <a class="nav-link navText" href="#">Reservation</a>
                     </li>
                 </ul>
+
             </div>
         </nav>
     </header>
@@ -63,149 +64,147 @@
     </div>
     <div class="container">
         <div class="row section sectionWhite-bg">
-            <div class="col col-lg-12 col-sm-12">
-                <h2 style="margin:5%; width:100%; text-align:center;">NOODLES / FRIED RICE / CURRY</h2>
-                <table class="table table-borderless" style="margin-top:2%;">
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th style="text-align: center;">Item</th>
-                            <th style="text-align: center;">Detail</th>
-                            <th>Price</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-A. Clientro Tofu</td>
-                            <td>Grilled tofu strip on bamboo skewer served with peanut sauce & cucumber salad.</td>
-                            <td>$6.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-B. Veggie Paradise</td>
-                            <td>Golden vegetables served with ground peanut in sweet and sour sauce.</td>
-                            <td>$7.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-1. Crispy Spring Rolls</td>
-                            <td>Deep-fried rolls, carrot, cabbage, celery, and crystal noodle served with sweet n sour
-                                sauce.</td>
-                            <td>$2.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-2. Fresh Rolls Tofu</td>
-                            <td>Rice wrapper with noodle, cooked tofu, and fresh vegetable served with house sauce.</td>
-                            <td>$3.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-3. Crispy Tofu</td>
-                            <td>Deep fried tofu served with ground peanut in sweet chili sauce.</td>
-                            <td>$4.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-A. Clientro Tofu</td>
-                            <td>Grilled tofu strip on bamboo skewer served with peanut sauce & cucumber salad.</td>
-                            <td>$6.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-B. Veggie Paradise</td>
-                            <td>Golden vegetables served with ground peanut in sweet and sour sauce.</td>
-                            <td>$7.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-1. Crispy Spring Rolls</td>
-                            <td>Deep-fried rolls, carrot, cabbage, celery, and crystal noodle served with sweet n sour
-                                sauce.</td>
-                            <td>$2.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-2. Fresh Rolls Tofu</td>
-                            <td>Rice wrapper with noodle, cooked tofu, and fresh vegetable served with house sauce.</td>
-                            <td>$3.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-3. Crispy Tofu</td>
-                            <td>Deep fried tofu served with ground peanut in sweet chili sauce.</td>
-                            <td>$4.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-A. Clientro Tofu</td>
-                            <td>Grilled tofu strip on bamboo skewer served with peanut sauce & cucumber salad.</td>
-                            <td>$6.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-B. Veggie Paradise</td>
-                            <td>Golden vegetables served with ground peanut in sweet and sour sauce.</td>
-                            <td>$7.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-1. Crispy Spring Rolls</td>
-                            <td>Deep-fried rolls, carrot, cabbage, celery, and crystal noodle served with sweet n sour
-                                sauce.</td>
-                            <td>$2.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-2. Fresh Rolls Tofu</td>
-                            <td>Rice wrapper with noodle, cooked tofu, and fresh vegetable served with house sauce.</td>
-                            <td>$3.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-3. Crispy Tofu</td>
-                            <td>Deep fried tofu served with ground peanut in sweet chili sauce.</td>
-                            <td>$4.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-A. Clientro Tofu</td>
-                            <td>Grilled tofu strip on bamboo skewer served with peanut sauce & cucumber salad.</td>
-                            <td>$6.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-B. Veggie Paradise</td>
-                            <td>Golden vegetables served with ground peanut in sweet and sour sauce.</td>
-                            <td>$7.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-1. Crispy Spring Rolls</td>
-                            <td>Deep-fried rolls, carrot, cabbage, celery, and crystal noodle served with sweet n sour
-                                sauce.</td>
-                            <td>$2.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-2. Fresh Rolls Tofu</td>
-                            <td>Rice wrapper with noodle, cooked tofu, and fresh vegetable served with house sauce.</td>
-                            <td>$3.95</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td scope="row">V-3. Crispy Tofu</td>
-                            <td>Deep fried tofu served with ground peanut in sweet chili sauce.</td>
-                            <td>$4.95</td>
-                        </tr>
+            <h2 class="mt-4 width text-center">NOODLES/FRIED RICE/CURRY</h2>
+            <table class="table table-borderless table-hover mt-2;">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th class="text-center">Item</th>
+                        <th class="text-center pr-5 mr-5">Detail</th>
+                        <th>Price</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-A. Clientro Tofu</td>
+                        <td>Grilled tofu strip on bamboo skewer served with peanut sauce & cucumber salad.</td>
+                        <td>$6.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-B. Veggie Paradise</td>
+                        <td>Golden vegetables served with ground peanut in sweet and sour sauce.</td>
+                        <td>$7.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-1. Crispy Spring Rolls</td>
+                        <td>Deep-fried rolls, carrot, cabbage, celery, and crystal noodle served with sweet n sour
+                            sauce.</td>
+                        <td>$2.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-2. Fresh Rolls Tofu</td>
+                        <td>Rice wrapper with noodle, cooked tofu, and fresh vegetable served with house sauce.</td>
+                        <td>$3.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-3. Crispy Tofu</td>
+                        <td>Deep fried tofu served with ground peanut in sweet chili sauce.</td>
+                        <td>$4.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-A. Clientro Tofu</td>
+                        <td>Grilled tofu strip on bamboo skewer served with peanut sauce & cucumber salad.</td>
+                        <td>$6.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-B. Veggie Paradise</td>
+                        <td>Golden vegetables served with ground peanut in sweet and sour sauce.</td>
+                        <td>$7.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-1. Crispy Spring Rolls</td>
+                        <td>Deep-fried rolls, carrot, cabbage, celery, and crystal noodle served with sweet n sour
+                            sauce.</td>
+                        <td>$2.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-2. Fresh Rolls Tofu</td>
+                        <td>Rice wrapper with noodle, cooked tofu, and fresh vegetable served with house sauce.</td>
+                        <td>$3.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-3. Crispy Tofu</td>
+                        <td>Deep fried tofu served with ground peanut in sweet chili sauce.</td>
+                        <td>$4.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-A. Clientro Tofu</td>
+                        <td>Grilled tofu strip on bamboo skewer served with peanut sauce & cucumber salad.</td>
+                        <td>$6.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-B. Veggie Paradise</td>
+                        <td>Golden vegetables served with ground peanut in sweet and sour sauce.</td>
+                        <td>$7.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-1. Crispy Spring Rolls</td>
+                        <td>Deep-fried rolls, carrot, cabbage, celery, and crystal noodle served with sweet n sour
+                            sauce.</td>
+                        <td>$2.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-2. Fresh Rolls Tofu</td>
+                        <td>Rice wrapper with noodle, cooked tofu, and fresh vegetable served with house sauce.</td>
+                        <td>$3.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-3. Crispy Tofu</td>
+                        <td>Deep fried tofu served with ground peanut in sweet chili sauce.</td>
+                        <td>$4.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-A. Clientro Tofu</td>
+                        <td>Grilled tofu strip on bamboo skewer served with peanut sauce & cucumber salad.</td>
+                        <td>$6.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-B. Veggie Paradise</td>
+                        <td>Golden vegetables served with ground peanut in sweet and sour sauce.</td>
+                        <td>$7.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-1. Crispy Spring Rolls</td>
+                        <td>Deep-fried rolls, carrot, cabbage, celery, and crystal noodle served with sweet n sour
+                            sauce.</td>
+                        <td>$2.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-2. Fresh Rolls Tofu</td>
+                        <td>Rice wrapper with noodle, cooked tofu, and fresh vegetable served with house sauce.</td>
+                        <td>$3.95</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td scope="row">V-3. Crispy Tofu</td>
+                        <td>Deep fried tofu served with ground peanut in sweet chili sauce.</td>
+                        <td>$4.95</td>
+                    </tr>
 
 
 
-                    </tbody>
-                </table>
-            </div>
+                </tbody>
+            </table>
         </div>
+    </div>
     </div>
 
 
