--- a/restaurant_ver01/soupsandsalad.html
+++ b/restaurant_ver01/soupsandsalad.html
@@ -29,11 +29,11 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavId">
-                <ul class="navbar-nav">
-                    <li class="nav-item active mx-5">
+                <ul class="navbar-nav ">
+                    <li class="nav-item active mx-lg-5 px-lg-3 mr-md-3">
                         <a class="nav-link navText" href="index.html"> Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown mr-lg-5 mr-md-3">
                         <a class="nav-link dropdown-toggle navText" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
                             Menu
@@ -47,13 +47,14 @@
                             <a class="dropdown-item dropdown" href="drinks.html">Drinks</a>
                         </div>
                     </li>
-                    <li class="nav-item mx-5">
+                    <li class="nav-item mr-lg-5 mr-md-3">
                         <a class="nav-link navText" href="directions.html">Directions</a>
                     </li>
-                    <li class="nav-item pr-4">
+                    <li class="nav-item pr-4 mr-lg-5 mr-md-3">
                         <a class="nav-link navText" href="#">Reservation</a>
                     </li>
                 </ul>
+
             </div>
         </nav>
     </header>
@@ -61,13 +62,13 @@
     <div class="overlayDirection"></div>
     <div class="container">
         <div class="row section sectionWhite-bg">
-            <h2 style="margin:5%; width:100%; text-align:center;">SOUPS / SALAD</h2>
-            <table class="table table-borderless" style="margin-top:2%;">
+            <h2 class="mt-4 width text-center">SOUPS/SALAD</h2>
+            <table class="table table-borderless table-hover mt-2;">
                 <thead>
                     <tr>
                         <th></th>
-                        <th style="text-align: center;">Item</th>
-                        <th style="text-align: center;">Detail</th>
+                        <th class="text-center">Item</th>
+                        <th class="text-center pr-5 mr-5">Detail</th>
                         <th>Price</th>
                     </tr>
                 </thead>
